plugins {
    id "net.fabricmc.fabric-loom" version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = "${project.archives_base_name}-mc${project.minecraft_version}"
}

repositories {
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.

    maven {
        name = "AlexIIL"
        url = "https://staging.alexiil.uk/maven/"
    }
    maven {
        url = "https://maven.terraformersmc.com/releases/"
    }
    maven {
        url = "https://maven.shedaniel.me/"
    }
//    maven {
//        url = "https://maven.architectury.dev/"
//    }
}

repositories.named("Mojang", MavenArtifactRepository) {
    artifactUrls ArtifactRepositoryContainer.MAVEN_CENTRAL_URL
}

loom {
    runs {
        client {
            runDir = "run${minecraft_version}"
            vmArgs("-XX:+AllowEnhancedClassRedefinition", "-XX:HotswapAgent=fatjar")
            programArgs("--width=1280", "--height=720")
        }
    }

//    splitEnvironmentSourceSets()
//
//    mods {
//        modid {
//            sourceSet sourceSets.main
//            sourceSet sourceSets.client
//        }
//    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // Uncomment the following line to enable the deprecated Fabric API modules.
    // These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

    // implementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_api_version}"

    implementation include("io.github.cottonmc:LibGui:${project.LibGui_version}")

    compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
    localRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"

//    compileOnly "dev.emi:emi-fabric:${project.emi_version}:api"
//    localRuntime "dev.emi:emi-fabric:${project.emi_version}"

//    compileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
//    compileOnly "me.shedaniel.cloth:basic-math:+"
//    compileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
//    localRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
